--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,11 +2,27 @@
 @tailwind components;
 @tailwind utilities;
 
+
 .background {
+    margin: auto;
+    overflow: auto;
     background: #00467F;
-    /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #A5CC82, #00467F);
-    /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #A5CC82, #00467F);
-    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: linear-gradient(315deg, #A5CC82 3%, #00467F 38%, #A5CC82 68%, #00467F 98%);
+    animation: gradient 15s ease infinite;
+    background-size: 400% 400%;
+    background-attachment: fixed;
+}
+
+@keyframes gradient {
+    0% {
+        background-position: 0% 0%;
+    }
+
+    50% {
+        background-position: 100% 100%;
+    }
+
+    100% {
+        background-position: 0% 0%;
+    }
 }
